--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,71 @@
-:root { 
+:root {
     --morado: #6a11cb;
     --rosa: #fbc2eb;
-    --rosa2:#fbc2eb;;
+
 }
 
 /* Clases generales */
-.text-cRosa{
+.text-cPink {
     color: var(--rosa);
 }
-.text-shadow{
+
+.text-cPurple {
+    color: var(--morado);
+}
+
+.text-shadow {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.419);
 }
 
+
 /*Elementos mas precisos*/
 
-body{
+body {
     display: flex;
     flex-direction: column;
 }
+
 header {
     min-height: 100px;
     background: var(--morado);
     color: #fff;
     padding-top: 30px;
     border-bottom: var(--rosa) 5px solid;
-    
+
 }
 
-.btn-nav{
+.btn-nav {
     display: none;
 }
 
-header .container{
+header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-header h1{
+
+header h1 {
     width: 40%;
+    text-wrap: nowrap;
 }
-nav{
+
+nav {
     flex-grow: 1;
     max-width: 600px;
     margin-left: 10%;
 }
 
-header ul{
+header ul {
     list-style: none;
-    display:flex;
+    display: flex;
     justify-content: space-around;
+    flex-wrap: nowrap;
     padding: 0;
     margin: 0;
+
+    & il {
+        margin-inline: 5px;
+    }
 }
 
 header a {
@@ -60,30 +75,32 @@ header a {
     font-size: 16px;
 }
 
-header a:hover{
+header a:hover {
     color: #fbc2eb;
 }
 
 
 
 
-main{
+main {
     flex-grow: 1;
-    & > * {
+
+    &>* {
         margin-block: 60px;
     }
 }
 
-#start{
+#start {
     margin: 0;
     height: 400px;
     text-align: center;
-    color: blueviolet;
     background: linear-gradient(45deg, #e7a8aa 0%, #fad0c4 99%, #f3d6cd 100%);
 }
-#start .container-max{
+
+#start .container-max {
     width: 100%;
     height: 100%;
+    padding-inline: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -91,13 +108,68 @@ main{
     background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23fbc2eb" fill-opacity="0.5" d="M0,32L48,80C96,128,192,224,288,224C384,224,480,128,576,90.7C672,53,768,75,864,96C960,117,1056,139,1152,149.3C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>') no-repeat bottom center;
     background-size: cover;
 }
+
 #start h1 {
     margin-top: 100px;
     font-size: 55px;
     margin-bottom: 10px;
 }
 
-footer{
+#about {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    ;
+
+    & p {
+        text-align: start;
+    }
+}
+
+#perfilImg {
+    margin-block: 50px;
+    max-width: 250px;
+    max-height: 250px;
+    background: url("img/lotfi.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 30vw;
+    height: 30vw;
+    border-radius: 50%;
+    border: 5px solid rgb(226, 43, 177)
+}
+
+.skill{
+    width: 60px;
+    height: 60px;
+    filter: drop-shadow(5px 5px 6px rgb(0, 0, 0));
+    margin: 10px;
+}
+
+
+#projects h3, #projects h2 {
+    color: var(--morado);
+}
+
+
+
+
+.project{
+    min-width: 200px;
+    max-width: 600px;
     background-color: red;
-    height:160px;
+    margin-inline: 30px;
+}
+
+footer {
+    background-color: red;
+    height: 160px;
+}
+
+@media(max-width: 500px) {
+    nav {
+        width: 0;
+        overflow: hidden;
+    }
 }
