--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,15 @@
 }
 
 
-/*Elementos mas precisos*/
-
+/*Elementos más precisos*/
+html{
+    background: var(--morado);
+}
 body {
+    background: linear-gradient(45deg, #e7a8aa 0%, #fad0c4 99%, #f3d6cd 100%);
     display: flex;
     flex-direction: column;
+    
 }
 
 header {
@@ -31,6 +35,7 @@ header {
     color: #fff;
     padding-top: 30px;
     border-bottom: var(--rosa) 5px solid;
+    border-radius:  0 0 10px 10px;
 
 }
 
@@ -48,8 +53,9 @@ header h1 {
     width: 40%;
     text-wrap: nowrap;
 }
-
+/*Pendiente de implementar un nav con botón de expansión */
 nav {
+    display: none;
     flex-grow: 1;
     max-width: 600px;
     margin-left: 10%;
@@ -63,7 +69,7 @@ header ul {
     padding: 0;
     margin: 0;
 
-    & il {
+    & li {
         margin-inline: 5px;
     }
 }
@@ -84,7 +90,7 @@ header a:hover {
 
 main {
     flex-grow: 1;
-
+    padding: 0;
     &>* {
         margin-block: 60px;
     }
@@ -92,6 +98,7 @@ main {
 
 #start {
     margin: 0;
+    border-radius: 10px;
     height: 400px;
     text-align: center;
     background: linear-gradient(45deg, #e7a8aa 0%, #fad0c4 99%, #f3d6cd 100%);
@@ -116,13 +123,17 @@ main {
 }
 
 #about {
+    max-width: none;
+    background: white;
+    border-radius: 20px;
     text-align: center;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    ;
-
+    align-items: center; 
+    padding-block: 20px;
     & p {
+        max-width: 800px;
         text-align: start;
     }
 }
@@ -131,16 +142,18 @@ main {
     margin-block: 50px;
     max-width: 250px;
     max-height: 250px;
+    min-width: 200px;
+    min-height: 200px;
     background: url("img/lotfi.jpg");
     background-size: cover;
     background-position: center;
     width: 30vw;
     height: 30vw;
     border-radius: 50%;
-    border: 5px solid rgb(226, 43, 177)
+    border: 5px solid rgb(226, 43, 177);
 }
 
-.skill{
+.icono{
     width: 60px;
     height: 60px;
     filter: drop-shadow(5px 5px 6px rgb(0, 0, 0));
@@ -156,20 +169,75 @@ main {
 
 
 .project{
-    min-width: 200px;
-    max-width: 600px;
-    background-color: red;
-    margin-inline: 30px;
+    padding-block: 10px;
+}
+.project .container{
+    padding-block: 10px;
+    border: 5px solid var(--rosa);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.377);
+}
+
+.project a {
+    text-decoration: none;
+    color: var(--morado);
+}
+
+.img-proyect{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+.resumen{
+    display: none;
+}
+.description{
+    overflow: auto;
+    height: 150px;
+}
+
+.project .skills{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer {
-    background-color: red;
+    background-color: var(--morado);
+    border-radius: 10px 10px 0 0;
+    padding-block: 20px;
     height: 160px;
 }
+
+footer .container{
+    width: max-content;
+}
+
+footer .icono{
+    
+    filter: none;
+}
+
+
 
 @media(max-width: 500px) {
     nav {
         width: 0;
         overflow: hidden;
     }
+    .row{
+        justify-content: center;
+    }
+    .resumen{
+        display: block;
+    }
+    .description{
+        display: none;
+    }
+    .project{
+        width: 80%;
+    }
+
 }
