--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ main {
 
 
 .project{
+    max-height: 800px;
     padding-block: 10px;
 }
 .project .container{
@@ -186,16 +187,21 @@ main {
 }
 
 .img-proyect{
+    max-width: 400px;
     width: 100%;
-    height: 100%;
-    border-radius: 5px;
+    height: auto;
+    max-height: 300px;
+    display: block;
+    margin: 0 auto; /* Centra la imagen horizontalmente */
 }
+
+
 .resumen{
     display: none;
 }
 .description{
     overflow: auto;
-    height: 150px;
+    height: 150;
 }
 
 .project .skills{
@@ -222,7 +228,7 @@ footer .icono{
 
 
 
-@media(max-width: 500px) {
+@media(max-width: 1000px) {
     nav {
         width: 0;
         overflow: hidden;
@@ -237,6 +243,7 @@ footer .icono{
         display: none;
     }
     .project{
+        max-width: 700px;
         width: 80%;
     }
 
