--- a/miniProyectos/cuestionariosTipoTest/stylesCuestionario.css
+++ b/miniProyectos/cuestionariosTipoTest/stylesCuestionario.css
@@ -31,7 +31,7 @@ h1, h2, h3 {
     margin-bottom: 1rem;
 }
 
-main > *:not(#context-menu) , .container {
+main > *:not(#context-menu, #prueba) , .container {
     width: 80%;
     max-width: 800px;
     min-width: 340px;
@@ -90,8 +90,51 @@ main > *:not(#context-menu) , .container {
     color: var(--warning);
 }
 
-/* Estilos para la sección de preguntas */
+/* Estilos para la sección de Pruebas */
+#prueba{
+    display: flex;
+    width: 100%;
+    max-width: none;
+}
+
+
+
+
+#datosPrueba{
+    width: 30%;
+    height: 400px;
+    position: relative;
+}
+
+#preguntasDatos{
+    width: 100%;
+    overflow-y: auto;
+    scrollbar-width: none;
+    max-height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+}
+#borrarPreguntasInfo{
+    width: max-content;
+    position: absolute;
+    bottom: 4% ;
+    left: 5%;
+}
+.preguntaInfo{
+    width: 50px;
+    height: 65px;
+    margin: 5px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 200%;
+    border: #0b5ed7 1px solid;
+}
+
+
 #preguntas {
+    width: 60%;
     background-color: var(--white);
     border: 1px solid var(--secondary);
     border-radius: 0.25rem;
@@ -286,7 +329,7 @@ main > *:not(#context-menu) , .container {
 
 
 /* Estilos responsivos */
-@media (max-width: 768px) {
+@media (max-width: 950px) {
     .container {
         padding: 0.5rem;
     }
@@ -299,7 +342,15 @@ main > *:not(#context-menu) , .container {
         width: 100%;
         margin-bottom: 0.5rem;
     }
-
+    #prueba{
+        flex-direction: column;
+    }
+    #datosPrueba{
+        width: 60%;
+    }
+    #borrarPreguntasInfo{
+        bottom: 2%;
+    }
     #crearExamen .button-group {
         flex-direction: column;
         & button{
