--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,16 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.419);
 }
 
+.txt-center{
+    text-align: center;
+}
 
 /*Elementos más precisos*/
 html{
     background: var(--morado);
 }
 body {
+    overflow-x: hidden;
     background: linear-gradient(45deg, #e7a8aa 0%, #fad0c4 99%, #f3d6cd 100%);
     display: flex;
     flex-direction: column;
@@ -169,7 +173,6 @@ main {
 
 
 .project{
-    max-height: 800px;
     padding-block: 10px;
 }
 .project .container{
@@ -187,21 +190,16 @@ main {
 }
 
 .img-proyect{
-    max-width: 400px;
     width: 100%;
-    height: auto;
-    max-height: 300px;
-    display: block;
-    margin: 0 auto; /* Centra la imagen horizontalmente */
+    height: clamp(400px, 100%, 500px);
+    border-radius: 5px;
 }
-
-
 .resumen{
     display: none;
 }
 .description{
     overflow: auto;
-    height: 150;
+    height: 150px;
 }
 
 .project .skills{
@@ -228,7 +226,7 @@ footer .icono{
 
 
 
-@media(max-width: 1000px) {
+@media(max-width: 1100px) {
     nav {
         width: 0;
         overflow: hidden;
@@ -243,7 +241,6 @@ footer .icono{
         display: none;
     }
     .project{
-        max-width: 700px;
         width: 80%;
     }
 
